# codex-todo

./: .gitignore  README.md  pyproject.toml
codex_todo/: config.py  db.py  main.py
scripts/: record-demo.sh
