[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-todo"
version = "0.1.0"
description = "A Textual/DuckDB-backed TODO app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "duckdb",
    "tomli; python_version < '3.11'",
]

[project.scripts]
codex-todo = "codex_todo.main:main"